src/objects/Event_Charge_Item_Employee__c.object
<CustomObject>
    <description>Used to associate an employee(s) to each Charge Item.</description>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Split_Amount__c</fullName>
        <label>Split Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>Event Charge Item Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ECIE-{00000}</displayFormat>
        <label>Event Charge Item Employee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Charge Item Employees</pluralLabel>
    <recordTypes>
        <fullName>Event_Charge_Item_Employee</fullName>
        <active>true</active>
        <label>Event Charge Item Employee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Gratuity_Split</fullName>
        <active>true</active>
        <label>Gratuity Split</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>